src/parser/snapshots/rbx_rsml__parser__tests__macro_datatype_return.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Macro {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                MacroDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "MyColor",
                    ),
                    14,
                ),
                leading_trivia: None,
            },
        ),
        args: None,
        return_type: Some(
            (
                Node {
                    token: SpannedToken(
                        15,
                        ReturnArrow,
                        17,
                    ),
                    leading_trivia: None,
                },
                Some(
                    Node {
                        token: SpannedToken(
                            18,
                            Identifier(
                                "Datatype",
                            ),
                            26,
                        ),
                        leading_trivia: None,
                    },
                ),
            ),
        ),
        body: Some(
            MacroBody {
                open: Node {
                    token: SpannedToken(
                        27,
                        ScopeOpen,
                        28,
                    ),
                    leading_trivia: None,
                },
                content: Datatype(
                    Some(
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    29,
                                    ColorHex(
                                        "#ff0000",
                                    ),
                                    36,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ),
                ),
                close: Some(
                    Node {
                        token: SpannedToken(
                            37,
                            ScopeClose,
                            38,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
